--- a/contact.html
+++ b/contact.html
@@ -13,16 +13,20 @@
     <title>Contact | Croissant</title>
   </head>
   <body>
-    <h1 class="mt-5">🥐 Croissant</h1>
-    <p>
-      To contact croissant.com, please email us at
-      <a href="hello@croissant.com">hello@croissant.com</a>
-      for more info
-    </p>
-    <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
-    </footer>
+    <div class="container">
+      <div class="wrapper">
+        <h1 class="mt-5">🥐 Croissant</h1>
+        <p>
+          To contact croissant.com, please email us at
+          <a href="hello@croissant.com">hello@croissant.com</a>
+          for more info
+        </p>
+        <footer>
+          <a href="/">Homepage</a>
+          <a href="/photo.html">Photo</a>
+          <a href="/contact.html">Contact</a>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
