--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
     <title>Home | Croissant</title>
   </head>
   <body>
-    <h1 class="mt-5">🥐 Croissant</h1>
-    <p>
-      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
-      named for its historical crescent shape. Croissants and other viennoiserie
-      are made of a layered yeast-leavened dough
-    </p>
-    <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
-    </footer>
+    <div class="container">
+      <div class="wrapper">
+        <h1 class="mt-5">🥐 Croissant</h1>
+        <p>
+          A croissant is a buttery, flaky, viennoiserie pastry of Austrian
+          origin, named for its historical crescent shape. Croissants and other
+          viennoiserie are made of a layered yeast-leavened dough
+        </p>
+        <footer>
+          <a href="/">Homepage</a>
+          <a href="/photo.html">Photo</a>
+          <a href="/contact.html">Contact</a>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
