--- a/photo.html
+++ b/photo.html
@@ -13,16 +13,20 @@
     <title>Photo | Croissant</title>
   </head>
   <body>
-    <h1 class="mt-5">🥐 Croissant</h1>
-    <img
-      src="https://hips.hearstapps.com/hmg-prod/images/delish-201217-shortcut-croissants-006-ab-1614354652.jpg?crop=1.00xw:1.00xh;0,0&resize=1200:*"
-      width="500px"
-      class="mt-3 mb-3 rounded-3"
-    />
-    <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
-    </footer>
+    <div class="container">
+      <div class="wrapper">
+        <h1 class="mt-5">🥐 Croissant</h1>
+        <img
+          src="https://hips.hearstapps.com/hmg-prod/images/delish-201217-shortcut-croissants-006-ab-1614354652.jpg?crop=1.00xw:1.00xh;0,0&resize=1200:*"
+          width="500px"
+          class="mt-3 mb-3 rounded-3"
+        />
+        <footer>
+          <a href="/">Homepage</a>
+          <a href="/photo.html">Photo</a>
+          <a href="/contact.html">Contact</a>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
