Downloaded image and added to project

--- a/photo.html
+++ b/photo.html
@@ -17,7 +17,7 @@
       <div class="wrapper">
         <h1 class="mt-5">🥐 Croissant</h1>
         <img
-          src="https://hips.hearstapps.com/hmg-prod/images/delish-201217-shortcut-croissants-006-ab-1614354652.jpg?crop=1.00xw:1.00xh;0,0&resize=1200:*"
+          src="/images/delish-201217-shortcut-croissants-006-ab-1614354652.jpg"
           width="500px"
           class="mt-3 mb-3 rounded-3"
         />
