--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Want to order croissants for your next party or event? Contact us at hello@croissant.com"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -10,12 +14,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Contact | Croissant</title>
+    <title>Contact | croissant.com</title>
   </head>
   <body>
     <div class="container">
       <div class="wrapper">
-        <h1 class="mt-5">🥐 Croissant</h1>
+        <h1 class="mt-5">🥐 Contant croissant.com</h1>
         <p>
           To contact croissant.com, please email us at
           <a href="hello@croissant.com">hello@croissant.com</a>
