--- a/photo.html
+++ b/photo.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Admire the beautiful buttery, flaky, viennoiserie pastry known as the croissant."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -10,14 +14,15 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Photo | Croissant</title>
+    <title>Photo | croissant.com</title>
   </head>
   <body>
     <div class="container">
       <div class="wrapper">
-        <h1 class="mt-5">🥐 Croissant</h1>
+        <h1 class="mt-5">🥐 Croissant Photo</h1>
         <img
           src="/images/delish-201217-shortcut-croissants-006-ab-1614354652.jpg"
+          alt="Croissants on a purple background"
           width="500px"
           class="mt-3 mb-3 rounded-3"
         />
