Added titles to footer links for SEO

--- a/photo.html
+++ b/photo.html
@@ -27,9 +27,9 @@
           class="mt-3 mb-3 rounded-3"
         />
         <footer>
-          <a href="/">Homepage</a>
-          <a href="/photo.html">Photo</a>
-          <a href="/contact.html">Contact</a>
+          <a href="/" title="Home">Homepage</a>
+          <a href="/photo.html" title="Croissant photo">Photo</a>
+          <a href="/contact.html" title="Contant croissant.com">Contact</a>
         </footer>
       </div>
     </div>
